added random number generation to the battleship game to start the battleship in a random place, as well as fixed typos in html file.

--- a/battleship.html
+++ b/battleship.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Play battlship!</h1>
-    <script src="battlship.js"></script>
+    <h1>Play battleship!</h1>
+    <script src="battleship.js"></script>
   </body>
 </html>
